# slither-io-clone

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
src/: Food.cpp  Food.h  Game.cpp  Game.h  GameRenderer.cpp  GameRenderer.h  Player.cpp  Player.h  Vector2.cpp  Vector2.h  main.cpp
